k8s/apps/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sunriseobx-ingress
  namespace: sunriseobx
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sunriseobx-ip
    networking.gke.io/managed-certificates: sunriseobx-cert,sunriseobx-cdn-cert,sunriseobx-media-cert
    networking.gke.io/v1beta1.FrontendConfig: sunriseobx-frontend-config
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: api.sunriseobx.co
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-api
                port:
                  number: 8080
    - host: pkg.sunriseobx.co
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-pkg
                port:
                  number: 8080
    - host: cdn.sunriseobx.co
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-cdn
                port:
                  number: 8080
    - host: media.sunriseobx.co
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-media
                port:
                  number: 9999
    - host: sunriseobx.co
      http:
        paths:
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-api
                port:
                  number: 8080
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-api
                port:
                  number: 8080
          - path: /customer/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-api
                port:
                  number: 8080
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-web
                port:
                  number: 3000
    - host: www.sunriseobx.co
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: sunriseobx-web
                port:
                  number: 3000
